--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1033 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* .body, html {
+    max-width: 100vw;
+    overflow-x: hidden;
+    background-color: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.md-body-1, .md-body-2, .body {
+    font-size: 14px;
+    letter-spacing: .01em;
+}
+
+.md-body-1, body {
+    font-weight: 400;
+    line-height: 20px;
+}
+
+body {
+    min-height: 100%;
+    margin: 0;
+    position: relative;
+}
+
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 0 50px;
+    font-size: 18px;
+    font-weight: 600;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.align-center {
+    align-items: center !important;
+}
+
+.justify-between {
+    justify-content: space-between !important;
+}
+
+.content-wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.navbar, .Logo {
+height: 40px;
+width: 150px;
+}
+
+.navbar, .links {
+    position: relative;
+}
+
+.navbar, .links {
+    display: flex;
+    width: 100%;
+    max-width: 430px;
+}
+
+.navbar, .Home-Active {
+    color: #6030b1 !important;
+}
+
+.navbar, a {
+    text-decoration: underline;
+}
+
+.content-wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn {
+    display: flex;
+    cursor: pointer;
+    max-height: 48px;
+    min-height: 48px;
+    padding: 12px 40px;
+    align-items: center;
+    border: 2px #523eff;
+    border-radius: 50px;
+    background-color: #6030b1;
+    color: #fff !important;
+    font-size: 13px;
+    font-weight: 700px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: all .35s ease;
+}
+
+#LandingPage {
+max-width: 100vw;
+padding: 10px 20px 0 20px;
+overflow: hidden;
+display: flex;
+flex: 1;
+}
+
+.BigMainContainer {
+    flex-direction: column !important;
+}
+
+
+.NavBar__Links {
+    display: flex;
+   justify-content: flex-end;
+} */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: black;
+}
+
+.NavBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 50px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 30px;
+  position: relative;
+  background-color: transparent;
+  z-index: 2;
+}
+
+.Logo {
+height: 160px;
+width: 170px;
+/* max-width: 100%; 
+  height: auto;
+  display: block;
+  margin: 0 auto; */
+}
+
+.Logo img {
+  filter: drop-shadow(2px 2px 5px rgba(255, 255, 255, 0.5));
+}
+
+.ContactButton {
+  cursor: pointer;
+  padding: 12px 40px;
+  border: 2px #523eff;
+  border-radius: 50px;
+  background-color: #F5D13D;
+  /* color: white !important; */
+  color: black;
+  font-size: 20px;
+  font-weight: 900px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  /* font-style: italic; */
+  transition: 0.3s ease-in-out;
+  font-style: italic;
+  font-weight: bold;
+}
+
+/* .ContactButton:hover {
+  color: white;
+  background-color: black;
+  box-shadow: 0 0 10px yellow, 0 0 20px gold, 0 0 30px orange;
+  text-shadow: 0 0 10px yellow, 0 0 20px gold;
+  border-color: gold;
+} */
+
+body, html {
+  overflow-x: hidden;
+}
+
+.NavBar__Links {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 40%;
+  background: none;
+  /* padding: 5px 30px; */
+  /* display: none; */
+}
+
+.NavBar__Links a {
+  text-decoration: none;
+  color: #F5D13D;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: color 0.3s ease-in-out;
+  background: none !important;
+}
+
+.NavBar__Links a:hover {
+  color: #F5D13D;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 0, 0.6);
+  transform: scale(1.1);
+}
+
+.ContactButton {
+  box-shadow: 0 0 15px 5px rgba(255, 255, 0, 0.8); 
+}
+
+.Menu {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  z-index: 2000;
+}
+
+.burger-menu.open ~ #burgerButton i {
+  transform: rotate(90deg); /* Rotate the icon to look like a cross */
+  transition: transform 0.3s ease-in-out;
+}
+
+.MobileNav {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+
+.MobileNav a, .MobileNav button {
+  display: block;
+  padding: 10px;
+  text-align: center;
+}
+
+
+
+.FirstContainer {
+  /* z-index: 10px;
+  background-color: rgb(255, 255, 255);
+  padding: 0px 16px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; */
+  /* text-align: center;
+  justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.Container {
+  transform: none;
+  text-align: center;
+  justify-content: center;
+}
+
+.FirstHeader {
+  max-width: 730px;
+  font-weight: 700;
+  line-height: 1.25;
+  color: #F5D13D;
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 50px;
+}
+
+.Header2 {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0px 0px 40px;
+}
+
+.ChangeColor {
+  color: #f5f33d;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.InputSearch {
+  background-color: #fff;
+  border-radius: 20px;
+  border: 1px solid #0a1f44;
+  color: #0a1f44;
+  display: inline-block;
+  height: 70px;
+  line-height: 40px;
+  outline: none;
+  padding: 0 15px;
+  transition: border-color .2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  font-size: 24px;
+  padding-left: 25px;
+}
+
+.FilmRoll {
+  font-size: 80px;
+  color: #fff;
+  border-radius: 500px;
+  transition: all .25s ease;
+  margin: 0px 0px 0px 20px;
+  padding: 10px 30px;
+}
+
+
+
+.Loading {
+  font-size: 40px;
+  color: #fff;
+  border-radius: 40px;
+  transition: all .25s ease;
+  margin: 0px 0px 0px 80px;
+  padding: 10px 30px;
+  width: 700px;
+  height: 60px;
+}
+
+.Loading:hover {
+  background-color: rgb(198, 22, 22);
+  cursor: pointer;
+  box-shadow: 0 0 15px 5px rgba(255, 99, 71, 0.8); /* Glowing red effect */
+  transform: scale(1.1); /* Slightly scale up the button */
+
+}
+
+.StreamNow:hover {
+  background-color: none;
+}
+
+
+.Not-Loading {
+  border: 1px solid #F5D13D;
+  background-color: #F5D13D;
+  box-shadow: 7px 7px 14px rgba(134, 93 204, .3);
+  cursor: pointer;
+}
+
+.fa-magnifying-glass {
+overflow: visible;
+width: 1em;
+display: inline-block;
+font-size: inherit;
+height: 1em;
+vertical-align: -0.125em;
+/* background-color: #F5D13D; */
+}
+
+.StreamNow {
+  color: white;
+  text-decoration: none;
+  /* background-color: #F5D13D; */
+  font-style: italic;
+  background-color: transparent; /* Remove background */
+  border: none; /* Optional: removes any border if applied */
+  color: inherit;
+}
+
+
+
+.FilmRoll {
+  margin-top: 30px;
+}
+
+.Home-Active {
+  color:#F5D13D;
+  font-size: 20px;
+}
+
+.SearchYourFilm {
+  color: #F5D13D;
+  font-size: 20px;
+}
+
+.FirstContainer {
+
+  display: flex;
+ 
+ flex-direction: column;
+ 
+ align-items: center;
+ 
+ justify-content: center;
+ 
+ margin-top: 20px;
+ 
+ width: 100%;
+ 
+ animation: fadeInUp 1.5s ease-in-out 0.3s forwards;
+ 
+ }
+
+ .BrowseContainer {
+  margin-top: 40px;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+ }
+
+ .BrowseClickWatch {
+  font-weight: bold;
+  text-align: center;
+  font-size: 42px;
+  color: #fff;
+  text-shadow: 0 0 10px #F5D13D, 0 0 20px #F5D13D, 0 0 15px orange;
+  animation: glowingText 1.5s infinite alternate;
+  /* margin-top: 40px; */
+  background: none;
+  /* margin-bottom: 10px; */
+  margin-top: 10px;
+ }
+
+ /* .BrowseClickWatch {
+  position: relative;
+  z-index: 2;
+  margin-top: -50px;
+ } */
+
+ .BrowseMovieInput {
+  /* color: #F5D13D;
+  width: 100%;
+  max-width: 1200px;
+  height: 60px;
+  font-size: 20px;
+  padding-left: 20px;
+  background-color: #fff;
+  border-radius: 40px; */
+  padding-left: 20px;
+  border-radius: 40px;
+  border: 5px solid red !important;
+  flex: 1;
+  height: 50px;
+  padding: 8px;
+  border: none;
+  outline: 5px solid black;
+  font-size: 16px;
+  width: 100%;
+  max-width: none;
+  margin-bottom: 30px;
+  color: #F5D13D;
+  font-style: italic;
+ }
+
+ .SearchButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  right: 10px;
+ }
+
+ .SearchButton i {
+  font-size: 18px;
+  color: #F5D13D;
+ }
+
+ /* .search-bar {
+  width: 60%;
+  padding: 10px;
+  border-radius: 25px;
+  border: 2px solid gold;
+  font-size: 20px;
+ } */
+
+ .InputWrapper__Browse {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 40px;
+  gap: 10px;
+  position: relative;
+  width: 40%;
+  max-width: 600px;
+  /* transform: translate(-50%, -50%); */
+  /* background: white; */
+  /* border-radius: 5px; */
+  padding: 5px;
+  /* border: 1px solid #ccc; */
+  /* align-items: center; */
+  /* flex-direction: row; */
+  /* display: inline-block; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%);
+  /* max-width: 600px;
+  width: 100%; */
+  /* margin-top: 40px; */ 
+ }
+
+ .InputWrapper__Browse i {
+  position: absolute;
+  right: 15px;
+  top: -15%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #ccc;
+  cursor: pointer;
+  /* background-color: #fff; */
+ }
+
+ .InputWrapper__Browse input {
+  padding: 10px 40px 10px 15px;
+  border: 1px solid #ccc;
+  font-size: 20px;
+  /* width: 700px; */
+  border-radius: 40px;
+  /* align-items: center;
+  display: flex; */
+ }
+
+ .Search-Wrapper {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1000;
+  padding: 0 20px 0px 8px;
+  color: #F5D13D;
+  font-size: 32px;
+  transition: all .2s ease;
+ }
+
+ .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  background-image: url('./assets/red\ curtains.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  z-index: 0;
+ }
+
+ .body {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+ }
+
+ .BrowseInputContainer {
+  display: flex;
+  align-items: center;
+  margin-top: 150px;
+  justify-content: center;
+  text-align: center;
+  /* margin-top: 20px; */
+  /* min-height: 100vh; */
+  padding: 20px;
+  /* position: relative;
+  margin-top: 150px; */
+  flex-direction: column;
+  /* gap: 10px; */
+ }
+
+ #SearchResults {
+  position: relative;
+  /* padding: 40px 20px; */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+ }
+
+ 
+ .glowing-divider {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 215, 0, 1) 50%, rgba(255, 255, 0) 100%);
+  box-shadow: 0px 0px 15px rgba(255, 215, 0, 0.8);
+  animation: glowing 2s infinite linear;
+ }
+
+ .Filter {
+  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+ }
+
+ .curtain {
+  position: relative;
+  width: 100%;
+  height: 60vh;
+  background: url('./assets/red\ curtains.jpg') no-repeat center center/cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
+
+ .MovieTitle {
+  color: #f5f33d;
+  /* display: none; */
+ }
+
+ #SearchResults {
+  padding: 20px;
+  color: white;
+  margin-top: 10px;
+  /* background-color: #f8f8f8; */
+ }
+
+ .SearchResultsTitle {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: #F5D13D;
+ }
+
+ .LoadingWrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+ }
+
+ .LoadingState {
+  margin: 80px 0;
+  width: 100%;
+  justify-content: center !important;
+  visibility: hidden;
+ }
+
+ .FilterContainer {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+ }
+ 
+ .PriceFilter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #F5D13D;
+ }
+ 
+ #priceRange {
+  width: 200px;
+ }
+
+.MovieCard {
+  /* background: rgba(255, 255, 255, 0.1); */
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+  width: 200px;
+}
+
+.hidden {
+  visibility: visible;
+}
+
+.filter__selector {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  font-size: 24px;
+}
+
+#filter {
+  width: 100%;
+  max-width: 200px;
+  margin-top: 8px;
+  font-size: 24px;
+  color: rgb(12, 12, 12);
+  background-color: rgb(240, 187, 51);
+  font-weight: 500;
+  border-radius: 20px;
+  border: 2px solid gray;
+}
+
+option {
+  background-color: rgb(240, 187, 51);
+}
+
+.burger-menu {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: -250px; /* Initially hidden off-screen to the left */
+  width: 250px; /* Width of the menu */
+  height: 100%; /* Full screen height */
+  background-color: #333; /* Dark background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  transition: transform 0.3s ease-in-out; /* Smooth sliding transition */
+  z-index: -1; /* Initially behind other content */
+}
+
+.burger-menu.open {
+  transform: translateX(250px); /* Move the menu to the right */
+  z-index: 1000; /* Bring the menu above other content */
+}
+
+.burger-menu a, .burger-menu button {
+  color: white;
+  text-decoration: none;
+  margin: 15px 0;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+
+
+
+
+
+
+ 
+ /* Define the keyframe animation */
+ 
+ @keyframes fadeInUp {
+ 
+  0% {
+ 
+ opacity: 0;
+ 
+ transform: translateY(30px); /* Start below the normal position */
+ 
+  }
+ 
+  100% {
+ 
+ opacity: 1;
+ 
+ transform: translateY(0); /* End at the normal position */
+ 
+  }
+ 
+ }
+
+ @keyframes glowing {
+  0% { opacity: 0.5; }
+  50% { opacity: 1; }
+  100% { opacity: 0.5; }
+ }
+
+ @keyframes burgerAnimation {
+  0% {
+      transform: rotate(0);
+  }
+  50% {
+      transform: rotate(45deg);
+  }
+  100% {
+      transform: rotate(0);
+  }
+}
+
+#burgerButton {
+  animation: burgerAnimation 0.5s ease-in-out;
+}
+
+ @keyframes glowingText {
+  0% {
+      text-shadow: 0 0 5px #F5D13D, 0 0 10px #F5D13D, 0 0 15px orange;
+  }
+
+  50% {
+      text-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px darkred;
+  }
+
+  100% {
+      text-shadow: 0 0 15px #F5D13D, 0 0 25px #F5D13D, 0 0 35px orange;
+  }
+ }
+
+
+/* MEDIA QUIERIES  */
+
+
+@media (max-width: 600px) {
+  .NavBar__Links {
+      /* display: none !important; */
+      position: absolute;
+      top: 0;
+      right: -100%; /* Hide off-screen */
+      width: 250px;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.9);
+      flex-direction: column;
+      align-items: center;
+      padding-top: 60px;
+      transition: transform 0.4s ease-in-out;
+  }
+
+  .NavBar {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .Logo {
+      /* width: 50%; */
+      /* height: 45%; */
+      /* display: none; */
+  }
+
+  .FirstHeader {
+      Font-size: 30px;
+      color: #e71111;
+  }
+
+  .FirstContainer {
+      justify-content: flex-start;
+      padding-top: 20px;
+  }
+
+  .InputWrapper__Browse input {
+      width: 700px;
+  }
+
+  .InputWrapper__Browse i {
+      right: -35px;
+  }
+
+
+  .Header2 {
+      Font-size: 25px;
+  }
+
+  .Loading {
+      /* width: 500px; */
+      width: 300px; /* Button will take 80% of the container width */
+      font-size: 25px; /* Make font size bigger on smaller screens */
+      padding: 20px;
+      margin: 0;
+  }
+
+  .Loading:hover {
+      box-shadow: 0 0 15px 15px rgba(255, 99, 71, 0.8); /* Glowing red effect */
+      transform: scale(1.1); /* Slightly scale up the button */
+  }
+
+  .BrowseMovieInput {
+      width: 1500px;
+  }
+
+  .NavBar__Links.open {
+      /* display: flex;  */
+      transform: translateX(-100%);
+  }
+
+  .NavBar__Links a, .NavBar__Links button {
+      color: white;
+      text-decoration: none;
+      padding: 10px;
+      display: block;
+      width: 100%;
+  }
+
+
+  .StreamNow {
+      font-size: 30px;
+      letter-spacing: 3px;
+  }
+
+  .Menu {
+      /* display: block;  */
+      /* background: none; */
+      /* border: none;
+      color: white;
+      font-size: 18px; */
+      /* cursor: pointer; */
+      right: -250px;
+  }
+
+  .menu.open {
+      left: 0;
+  }
+
+  .burger-menu {
+      position: fixed;
+      display: none;
+      top: 0;
+      left: -250px; /* Initially hidden off-screen to the left */
+      width: 250px; /* Width of the menu */
+      height: 30%; /* Full screen height */
+      background-color: #e71111; /* Dark background */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      transition: transform 0.3s ease-in-out; /* Smooth sliding transition */
+      z-index: -1; /* Initially behind other content */
+  }
+
+  .burger-menu a, .burger-menu button {
+      display: block;
+      padding: 10px;
+      color: white;
+      text-decoration: none;
+      background: none;
+      border: none;
+      width: 100%;
+  }
+
+  .burger-menu a:hover, .burger-menu button:hover {
+      /* background: yellow; */
+      border-radius: 999px;
+      transform: scale(1.1);
+  }
+
+  .burger-menu.active {
+      display: block;
+  }
+
+  .burger-menu.show {
+      display: block; /* Show the burger menu when clicked */
+  }
+
+  .InputWrapper__Browse {
+      position: relative;
+      display: flex;
+      align-items: center;
+  }
+
+  .BrowseMovieInput {
+      width: 130%; /* Adjust width to 90% of the available space for a bit wider input */
+      max-width: none; /* Remove the maximum width constraint */
+      padding-left: 15px;
+  }
+
+  .input-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .SearchButton {
+      position: absolute;
+      left: 10px;  /* Align the icon further to the left */
+      background: transparent;
+      border: none;
+      cursor: pointer;
+  }
+
+  .SearchButton i {
+      font-size: 18px;
+      color: #333; /* You can adjust this color */
+  }
+
+  #burgerButton {
+      display: block;
+      font-size: 24px;
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      z-index: 1000;
+  }
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+
+  /* .NavBar a {
+      padding: 0 10px;
+  } */
+ 
+  .NavBar {
+      display: flex;
+      gap: 20px;
+  }
+
+  .NavBar__Links {
+      align-items: center;
+      width: 80%;
+  }
+
+  .NavBar__Links a {
+      color: #F5D13D;
+  }
+
+  .Loading {
+      width: 500px;
+      /* align-items: center; */
+  }
+
+  .input-wrapper {
+      width: 90%;
+  }
+
+  .FirstHeader {
+      color: #e71111;
+  }
+  
+}
+
+@media screen and (max-width: 1024px) {
+
+  .NavBar__Links a {
+      padding: 5px 30px;
+      /* font-weight: 600; */
+  }
+
 }
