--- a/src/index.css
+++ b/src/index.css
@@ -599,6 +599,12 @@ vertical-align: -0.125em;
   animation: glowing 2s infinite linear;
  }
 
+ .select-button {
+  z-index: 10;
+  position: relative;
+}
+
+
  .Filter {
   padding: 0 20px;
   display: flex;
