--- a/src/index.css
+++ b/src/index.css
@@ -627,6 +627,8 @@ vertical-align: -0.125em;
 
  .MovieTitle {
   color: #f5f33d;
+  font-size: 20px;
+ 
   /* display: none; */
  }
 
@@ -641,6 +643,9 @@ vertical-align: -0.125em;
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 15px;
+  text-align: left;
+  padding-right: 20px;
+  margin-top: 20px;
   color: #F5D13D;
  }
 
@@ -686,7 +691,9 @@ vertical-align: -0.125em;
   border-radius: 10px;
   text-align: center;
   width: 200px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .hidden {
   visibility: visible;
@@ -747,6 +754,37 @@ option {
   text-align: center;
 }
 
+/* Reset potential background color for filter area */
+.filter__selector, .Filter {
+  background-color: transparent;  /* Reset any background */
+  border: none;                   /* Remove any borders */
+  padding: 0;                     /* Remove padding if unnecessary */
+}
+
+/* Ensure dropdown is styled properly */
+.filter__selector select {
+  background-color: rgb(240, 187, 51);         /* White background for dropdown */
+  border: 1px solid #ccc;         /* Light border for dropdown */
+  padding: 8px 16px;                   /* Add some padding */
+  font-size: 16px;                /* Ensure font size is correct */
+  border-radius: 20px;
+}
+
+.Filter {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 70px; /* Add space between the movie cards */
+  justify-content: flex-start; /* Align items to the start of the container */
+}
+
+.Filter .MovieCard {
+  margin-bottom: 16px;             /* Add some space between movie cards */
+}
+
+/* Optional: Remove any specific overlay or unwanted background */
+.overlay {
+  background: none;
+}
 
 
 
@@ -1013,6 +1051,10 @@ option {
   .NavBar__Links {
       align-items: center;
       width: 80%;
+  }
+
+  .MovieCard {
+    width: 150px; /* Smaller width for mobile devices */
   }
 
   .NavBar__Links a {
