--- a/src/Pages/MovieSummary.css
+++ b/src/Pages/MovieSummary.css
@@ -50,3 +50,82 @@
 .BackButton:hover {
   background-color: #e3b202;
 }
+
+.MovieInfoExpanded strong {
+  color: #FFD700;
+}
+
+@media (max-width: 600px) {
+  .MovieCardExpanded {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .MoviePosterExpanded {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+  }
+
+  .MovieInfoExpanded {
+    width: 100%;
+    max-width: 100%;
+    text-align: left;
+    margin-top: 1.5rem;
+  }
+
+  .MovieTitleExpanded {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .BackButton {
+    width: 100%;
+    max-width: 300px;
+    font-size: 1rem;
+  }
+
+  .BackButtonWrapper {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .MovieCardExpanded {
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+  }
+
+  .MoviePosterExpanded {
+    width: 100%;
+    max-width: 350px;
+    height: auto;
+  }
+
+  .MovieInfoExpanded {
+    width: 100%;
+    max-width: 700px;
+    text-align: left;
+    margin-top: 2rem;
+  }
+
+  .MovieTitleExpanded {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .BackButton {
+    width: 100%;
+    max-width: 350px;
+    font-size: 1.05rem;
+  }
+
+  .BackButtonWrapper {
+    display: flex;
+    justify-content: center;
+  }
+}
+
